# ikitbot_ros2

./: README.md
src/auto_docking/: README.md
src/auto_docking/auto_docking_server/: CMakeLists.txt  package.xml
src/auto_docking/auto_docking_server/cfg/: Doxyfile.in  mylog.config
src/auto_docking/auto_docking_server/include/auto_docking/: auto_docking.hpp  dockingmachine.hpp  laser_obstacle_detect.h  yaml_helper.h
src/auto_docking/auto_docking_server/launch/: auto_docking.launch
src/auto_docking/auto_docking_server/param/: auto_docking_param.yaml  auto_docking_param_1.0.0.yaml  auto_docking_param_1.1.0.yaml  auto_docking_param_1.2.1.yaml
src/auto_docking/auto_docking_server/src/: auto_docking_node.cpp  auto_docking_server.cpp  dockingmachine.cpp  laser_obstacle_detect.cpp
src/auto_docking/auto_docking_server/test/: CMakeLists.txt  docker_listener.cpp  move_to_pose.cpp
src/auto_docking/docker_detector/: CMakeLists.txt  package.xml
src/auto_docking/docker_detector/cfg/: Doxyfile.in
src/auto_docking/docker_detector/include/docker_detector/: docker_detector.hpp  line_split.hpp
src/auto_docking/docker_detector/launch/: docker_detector.launch
src/auto_docking/docker_detector/src/: docker_detector_node.cpp  line_split.cpp
src/auto_docking/docker_detector/test/: CMakeLists.txt  LidarFilter.py  test.cpp
src/common/robot_msg/: CHANGELOG.md  CMakeLists.txt  package.xml
src/common/robot_msg/action/: AutoDock.action  AutoElevator.action  AuxiliaryPositioning.action  InoutElevator.action  LaserOdomCalibration.action  Navigation.action
src/common/robot_msg/msg/: ActionState.msg  BaseDiagnostics.msg  BaseInfo.msg  BatteryState.msg  ChargingState.msg  ChassisControl.msg  DepthMM.msg  DockingState.msg  Elevator.msg  ElevatorState.msg  FeedBack.msg  Gate.msg  GateArray.msg  Humidifier.msg  IntPolygon.msg  LeanMap.msg  LocalizationState.msg  LocationStatus.msg  NavHsmFlexState.msg  ObstacleItem.msg  Parameters.msg  Region.msg  RegionArray.msg  RegionClean.msg  Restrict.msg  RestrictArray.msg  ScoredPose.msg  SetVirtualWall.msg  SlamStatus.msg  SpeedAndAcceleration.msg  StateChassis.msg  StringOccupancyGrid.msg  VirtualBumperInfo.msg  VirtualBumperItem.msg  WallFollowInfoItem.msg
src/common/robot_msg/proto/: CMakeLists.txt  elevator_interface.proto
src/common/robot_msg/srv/: ChassisControlSrv.srv  CheckPosition.srv  CoverMap.srv  CoveragePathEstimate.srv  CoveragePathMove.srv  CoveragePathPlan.srv  CoveragePathSegmentation.srv  EraseMap.srv  GetDepthState.srv  GetDoorAngle.srv  GetElevatorPolygon.srv  GetFreeRatio.srv  GetMapInfo.srv  GetMoveBaseState.srv  GetPlan.srv  GetStaticPlan.srv  GetVirtualBumper.srv  IpaServerTest.srv  MapSaving.srv  MotionCmd.srv  RoomSegmentation.srv  SetAction.srv  SetCalibrateDepthCameraCmd.srv  SetCalibrateLineLaserCmd.srv  SetChargeStation.srv  SetDepthCamera.srv  SetDepthSliceMethod.srv  SetDevice.srv  SetElevator.srv  SetElevatorCenter.srv  SetGate.srv  SetGlobalParams.srv  SetLaserOdomCalibrate.srv  SetMap.srv  SetNodeParams.srv  SetOptModeCmd.srv  SetPathLimit.srv  SetRegion.srv  SetSlam.srv  TrainScan.srv
