<?xml version="1.0"?>
<package format="3">
  <name>docker_detector</name>
  <version>1.1.2</version>
  <description>
    The docker_detector package
  </description>

  <maintainer email="hubxyu@163.com">glh</maintainer>
  <license>TODO</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>angles</depend>
  <depend>robot_msg</depend> <!-- 自定义消息包 -->

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- ament export tags can go here -->
  </export>
</package>
