<?xml version="1.0"?>
<package format="3">
  <name>robot_msg</name>
  <version>0.0.1</version>
  <description>Robot messages, services and actions</description>
  <maintainer email="hubxyu@163.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>action_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <!-- 必须加上这行 -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
